# clients

./: errors.txt  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/: CODEOWNERS
.github/workflows/: build-browser-target.yml  build-browser.yml  build-cli-target.yml  build-cli.yml  build-desktop-target.yml  build-desktop.yml  build-web-target.yml  build-web.yml  chromatic.yml  crowdin-pull.yml  deploy-web.yml  lint-crowdin-config.yml  publish-cli.yml  publish-desktop.yml  publish-web.yml  release-desktop-beta.yml  release-desktop.yml  retrieve-current-desktop-rollout.yml  scan.yml  staged-rollout-desktop.yml  test-browser-interactions.yml
apps/browser/: tsconfig.json  webpack.config.js
apps/cli/: package.json
apps/desktop/: electron-builder.json
apps/desktop/desktop_native/: Cargo.toml
apps/desktop/desktop_native/autotype/: Cargo.toml
apps/desktop/desktop_native/autotype/src/: lib.rs  linux.rs  macos.rs  windowing.rs  windows.rs
apps/desktop/fastlane/: Fastfile
apps/desktop/native-messaging-test-runner/: package-lock.json  package.json
apps/desktop/src/: main.ts
apps/web/: tailwind.config.js  tsconfig.build.json  tsconfig.json
apps/web/src/: index.html
bitwarden_license/bit-web/: tsconfig.build.json
libs/auth/: tsconfig.json
libs/common/spec/: fake-state-provider.ts  fake-state.ts
libs/components/: tailwind.config.base.js
libs/components/src/: styles.css  styles.scss  theme.css  tw-theme.css  (+2 more)
libs/eslint/: require-label-on-biticonbutton.mjs
libs/key-management/: tsconfig.json
libs/state/: README.md
(+510 files in other folders)
