[package]
name = "autotype"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs.git", rev = "6437f5e1e02c287fd19ee3cae3d75a482e7ed5e0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
windows-core = { git = "https://github.com/microsoft/windows-rs.git", rev = "6437f5e1e02c287fd19ee3cae3d75a482e7ed5e0" }
windows-result = { git = "https://github.com/microsoft/windows-rs.git", rev = "6437f5e1e02c287fd19ee3cae3d75a482e7ed5e0" }
